# booking_rust

./: Cargo.toml  Rocket.toml  booking.code-workspace  main.sql
.github/: main.workflow
.github/workflows/: deploy.yml  main.yml
src/: json_struct.rs  main.rs
src/database/: db.rs
src/json_struct/: apartment.rs  apartment_j.rs  booking.rs  hotel.rs  hotel_j.rs  organization.rs  user.rs
src/models/: worker.rs
