[package]
name = "booking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
postgres = { version = "0.19.3", features = ["with-serde_json-1", "with-chrono-0_4"] }
postgres-openssl = "0.5.0"
openssl = "0.10.40"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
postgres-types = { version = "0.2.3", features = ["derive"] }
chrono = { vesrion = "0.4", features = ["serde"] }